Fix calls to pd.read_sql (#7777)